# semverity

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: analyzer.rs  bumper.rs  differ.rs  ecosystem.rs  main.rs  range.rs  version.rs
tests/: cli.rs
